add da cool visuaal bak

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="panels">
-    <!-- <panel-one></panel-one> -->
+    <panel-one></panel-one>
     <panel-two></panel-two>
     <mortgage-calculator></mortgage-calculator>
   </div>
